Comment settings dropdown getting clipped for comments at the bottom of the time line is now resolved

--- a/app/react/components/sizung/components/ConversationObjectList/index.css
+++ b/app/react/components/sizung/components/ConversationObjectList/index.css
@@ -37,10 +37,10 @@
 .list-footer {
   background-color: #ffffff;
   position: absolute;
-  bottom: 35px;
+  bottom: 25px;
   left: 0px;
   right: 0px;
-  height:60px;
+  height:70px;
 
   /*-webkit-box-shadow: 0px 0px 5px 0px #aaaaaa;*/
   /*-moz-box-shadow: 0px 0px 5px 0px #aaaaaa;*/
